Deploy an eksctl cluster using custom vpcs

--- a/infra/cf-loadbalancer.yaml
+++ b/infra/cf-loadbalancer.yaml
@@ -31,7 +31,7 @@ Resources:
       Subnets: 
         Fn::Split:
           - ','
-          - Fn::ImportValue: !Sub "eksctl-biomage-${Environment}-cluster::SubnetsPublic"
+          - Fn::ImportValue: !Sub "eksctl-biomage-${Environment}-cluster::SubnetsPrivate"
       Tags: 
         - Key: ingress.k8s.aws/resource
           Value: LoadBalancer
