--- a/infra/cluster-logging/cf-cluster-log-cloudwatch-policy.yaml
+++ b/infra/cluster-logging/cf-cluster-log-cloudwatch-policy.yaml
@@ -1,5 +1,5 @@
 AWSTemplateFormatVersion: "2010-09-09"
-Description: Set up canaries to check for heartbeat of services [managed by github.com/biomage-org/iac]
+Description: Setup policy required for K8s cluster to log to Cloudwatch [managed by github.com/biomage-org/iac]
 
 Parameters:
   Environment:
@@ -8,35 +8,30 @@ Parameters:
     AllowedValues:
       - staging
       - production
-    Description: The environment for which the tables need to be created.
+    Description: The environment for which the logs need to be created.
+  PodExecutionRoleName:
+    Type: String
 
 Resources:
   PlatformLogToCloudwatchRole:
-    Type: "AWS::IAM::Role"
+    Type: "AWS::IAM::Policy"
     Properties:
-      AssumeRolePolicyDocument:
+      PolicyName: !Sub "platform-log-to-cloudwatch-${Environment}"
+      PolicyDocument:
         Version: "2012-10-17"
         Statement:
           - Effect: Allow
-            Principal:
-              Service: lambda.amazonaws.com
-            Action: "sts:AssumeRole"
-      Path: /
-      Policies:
-        - PolicyName: !Sub "platform-log-to-cloudwatch-${Environment}"
-          PolicyDocument:
-            Version: "2012-10-17"
-            Statement:
-              - Effect: Allow
-                Action:
-                  - "logs:CreateLogStream"
-                  - "logs:CreateLogGroup"
-                  - "logs:DescribeLogStreams"
-                  - "logs:PutRetentionPolicy"
-                Resource:
-                  - !Sub "arn:aws:logs:${AWS::Region}:${AWS::AccountId}:log-group:/platform-logs/${Environment}"
-              - Effect: Allow
-                Action:
-                  - "logs:PutLogEvents"
-                Resource:
-                  - !Sub "arn:aws:logs:${AWS::Region}:${AWS::AccountId}:log-group:/platform-logs/${Environment}:log-stream:*"
+            Action:
+              - "logs:CreateLogStream"
+              - "logs:CreateLogGroup"
+              - "logs:DescribeLogStreams"
+              - "logs:PutRetentionPolicy"
+            Resource:
+              - !Sub "arn:aws:logs:${AWS::Region}:${AWS::AccountId}:log-group:/platform-logs/${Environment}"
+          - Effect: Allow
+            Action:
+              - "logs:PutLogEvents"
+            Resource:
+              - !Sub "arn:aws:logs:${AWS::Region}:${AWS::AccountId}:log-group:/platform-logs/${Environment}:log-stream:*"
+      Roles:
+        - !Ref PodExecutionRoleName
