--- a/infra/cluster.yaml
+++ b/infra/cluster.yaml
@@ -59,15 +59,15 @@ fargateProfiles:
     selectors:
       - namespace: worker-default
     subnets:
-      - app-us-east-2a
-      - app-us-east-2b
-      - dmz-us-east-2a
-      - dmz-us-east-2b
+      - subnet-0dcb4e46405522916
+      - subnet-05b2d2c3c63feed96
+      - subnet-0d951e44b83833d28
+      - subnet-09bccdc8be23d5402
   - name: pipeline-default
     selectors:
       - namespace: pipeline-default
     subnets:
-      - app-us-east-2a
-      - app-us-east-2b
-      - dmz-us-east-2a
-      - dmz-us-east-2b
+      - subnet-0dcb4e46405522916
+      - subnet-05b2d2c3c63feed96
+      - subnet-0d951e44b83833d28
+      - subnet-09bccdc8be23d5402
