--- a/infra/cluster.yaml
+++ b/infra/cluster.yaml
@@ -44,6 +44,7 @@ managedNodeGroups:
     minSize: 2
     maxSize: 4
     volumeSize: 80
+    privateNetworking: true
     subnets:
       - app-us-east-2a
       - app-us-east-2b
