--- a/.github/workflows/deploy-monitoring.yaml
+++ b/.github/workflows/deploy-monitoring.yaml
@@ -118,9 +118,11 @@ jobs:
           AWS_REGION: ${{ secrets.AWS_REGION }}
         run: |-
           # Using YQ4 because YQ3 does not have capability to substitute strings inside documents
-          yq -i ' (.. | select(type == "!!str")) |= sub("CLUSTER_ENV", "$CLUSTER_ENV")' infra/cluster-logging/fargate-fluentbit-config.yaml
-          yq -i ' (.. | select(type == "!!str")) |= sub("AWS_REGION", "$AWS_REGION")' infra/cluster-logging/fargate-fluentbit-config.yaml
+          yq -i '(.. | select(type == "!!str")) |= sub("CLUSTER_ENV", "$CLUSTER_ENV")' infra/cluster-logging/fargate-fluentbit-config.yaml
+          yq -i '(.. | select(type == "!!str")) |= sub("AWS_REGION", "$AWS_REGION")' infra/cluster-logging/fargate-fluentbit-config.yaml
 
+          echo "CLUSTER_ENV: $CLUSTER_ENV"
+          echo "AWS_REGION: $AWS_REGION"
           cat infra/cluster-logging/fargate-fluentbit-config.yaml
 
           # kubectl apply -f infra/cluster-logging/fargate-fluentbit-config.yaml
