--- a/.github/workflows/deploy-monitoring.yaml
+++ b/.github/workflows/deploy-monitoring.yaml
@@ -80,47 +80,47 @@ jobs:
           aws-secret-access-key: ${{ secrets.AWS_SECRET_ACCESS_KEY }}
           aws-region: ${{ secrets.AWS_REGION }}
 
-      # - id: add-kubeconfig
-      #   name: Add k8s config file for existing cluster.
-      #   run: |-
-      #     aws eks update-kubeconfig --name biomage-$CLUSTER_ENV
-
-      - id: get-pod-execution-role
-        name: Get pod execution role name
-        env:
-          AWS_ACCOUNT_ID: ${{ steps.setup-aws.outputs.aws-account-id }}
+      - id: add-kubeconfig
+        name: Add k8s config file for existing cluster.
         run: |-
-          # Get pod execution role ARN for cluster.
-          # Pods launched in the same cluster has the same pod execution role, as pod execution role scope is cluster-wide.
-          # See https://eksctl.io/usage/fargate-support/#creating-a-cluster-with-fargate-support
-          # Getting fargate-profile of pipeline or worker in the same cluster gets the same pod execution role.
+          aws eks update-kubeconfig --name biomage-$CLUSTER_ENV
 
-          POD_EXEC_ROLE_NAME=$(aws eks describe-fargate-profile \
-            --cluster-name biomage-$CLUSTER_ENV \
-            --fargate-profile-name pipeline-default | jq -r '.fargateProfile.podExecutionRoleArn' | awk -F"/" '{print (NF>1)? $NF : ""}' )
-
-          echo "::set-output name=name::$POD_EXEC_ROLE_NAME"
-
-      - id: setup-cluster-cloudwatch-logging-role
-        name: Setup role required for cluster to log to Cloudwatch
-        uses: aws-actions/aws-cloudformation-github-deploy@v1
-        with:
-          parameter-overrides: "Environment=${{ matrix.environment-type }},PodExecutionRoleName=${{ steps.get-pod-execution-role.outputs.name }}"
-          name: "cluster-cloudwatch-logging-role-${{ matrix.environment-type }}"
-          template: 'infra/cluster-logging/cf-cluster-log-cloudwatch-policy.yaml'
-          no-fail-on-empty-changeset: "1"
-
-      # - id: create-and-deploy-fluentbit-config
-      #   name: Create and deploy FluentBit config
+      # - id: get-pod-execution-role
+      #   name: Get pod execution role name
       #   env:
       #     AWS_ACCOUNT_ID: ${{ steps.setup-aws.outputs.aws-account-id }}
-      #     AWS_REGION: ${{ secrets.AWS_REGION }}
       #   run: |-
-      #     # Using YQ4 because YQ3 does not have capability to substitute strings inside documents
-      #     yq -i "(.. | select(type == \"!!str\")) |= sub(\"CLUSTER_ENV\", \"$CLUSTER_ENV\")" infra/cluster-logging/fargate-fluentbit-config.yaml
-      #     yq -i "(.. | select(type == \"!!str\")) |= sub(\"AWS_REGION\", \"$AWS_REGION\")" infra/cluster-logging/fargate-fluentbit-config.yaml
+      #     # Get pod execution role ARN for cluster.
+      #     # Pods launched in the same cluster has the same pod execution role, as pod execution role scope is cluster-wide.
+      #     # See https://eksctl.io/usage/fargate-support/#creating-a-cluster-with-fargate-support
+      #     # Getting fargate-profile of pipeline or worker in the same cluster gets the same pod execution role.
 
-      #     kubectl apply -f infra/cluster-logging/fargate-fluentbit-config.yaml
+      #     POD_EXEC_ROLE_NAME=$(aws eks describe-fargate-profile \
+      #       --cluster-name biomage-$CLUSTER_ENV \
+      #       --fargate-profile-name pipeline-default | jq -r '.fargateProfile.podExecutionRoleArn' | awk -F"/" '{print (NF>1)? $NF : ""}' )
+
+      #     echo "::set-output name=name::$POD_EXEC_ROLE_NAME"
+
+      # - id: setup-cluster-cloudwatch-logging-role
+      #   name: Setup role required for cluster to log to Cloudwatch
+      #   uses: aws-actions/aws-cloudformation-github-deploy@v1
+      #   with:
+      #     parameter-overrides: "Environment=${{ matrix.environment-type }},PodExecutionRoleName=${{ steps.get-pod-execution-role.outputs.name }}"
+      #     name: "cluster-cloudwatch-logging-role-${{ matrix.environment-type }}"
+      #     template: 'infra/cluster-logging/cf-cluster-log-cloudwatch-policy.yaml'
+      #     no-fail-on-empty-changeset: "1"
+
+      - id: create-and-deploy-fluentbit-config
+        name: Create and deploy FluentBit config
+        env:
+          AWS_ACCOUNT_ID: ${{ steps.setup-aws.outputs.aws-account-id }}
+          AWS_REGION: ${{ secrets.AWS_REGION }}
+        run: |-
+          # Using YQ4 because YQ3 does not have capability to substitute strings inside documents
+          yq -i "(.. | select(type == \"!!str\")) |= sub(\"CLUSTER_ENV\", \"$CLUSTER_ENV\")" infra/cluster-logging/fargate-fluentbit-config.yaml
+          yq -i "(.. | select(type == \"!!str\")) |= sub(\"AWS_REGION\", \"$AWS_REGION\")" infra/cluster-logging/fargate-fluentbit-config.yaml
+
+          kubectl apply -f infra/cluster-logging/fargate-fluentbit-config.yaml
 
       # - id: setup-datadog-cluster-agent
       #   name: Setup Datadog cluster agent
