--- a/.github/workflows/deploy-monitoring.yaml
+++ b/.github/workflows/deploy-monitoring.yaml
@@ -85,30 +85,30 @@ jobs:
         run: |-
           aws eks update-kubeconfig --name biomage-$CLUSTER_ENV
 
-      # - id: get-pod-execution-role
-      #   name: Get pod execution role name
-      #   env:
-      #     AWS_ACCOUNT_ID: ${{ steps.setup-aws.outputs.aws-account-id }}
-      #   run: |-
-      #     # Get pod execution role ARN for cluster.
-      #     # Pods launched in the same cluster has the same pod execution role, as pod execution role scope is cluster-wide.
-      #     # See https://eksctl.io/usage/fargate-support/#creating-a-cluster-with-fargate-support
-      #     # Getting fargate-profile of pipeline or worker in the same cluster gets the same pod execution role.
+      - id: get-pod-execution-role
+        name: Get pod execution role name
+        env:
+          AWS_ACCOUNT_ID: ${{ steps.setup-aws.outputs.aws-account-id }}
+        run: |-
+          # Get pod execution role ARN for cluster.
+          # Pods launched in the same cluster has the same pod execution role, as pod execution role scope is cluster-wide.
+          # See https://eksctl.io/usage/fargate-support/#creating-a-cluster-with-fargate-support
+          # Getting fargate-profile of pipeline or worker in the same cluster gets the same pod execution role.
 
-      #     POD_EXEC_ROLE_NAME=$(aws eks describe-fargate-profile \
-      #       --cluster-name biomage-$CLUSTER_ENV \
-      #       --fargate-profile-name pipeline-default | jq -r '.fargateProfile.podExecutionRoleArn' | awk -F"/" '{print (NF>1)? $NF : ""}' )
+          POD_EXEC_ROLE_NAME=$(aws eks describe-fargate-profile \
+            --cluster-name biomage-$CLUSTER_ENV \
+            --fargate-profile-name pipeline-default | jq -r '.fargateProfile.podExecutionRoleArn' | awk -F"/" '{print (NF>1)? $NF : ""}' )
 
-      #     echo "::set-output name=name::$POD_EXEC_ROLE_NAME"
+          echo "::set-output name=name::$POD_EXEC_ROLE_NAME"
 
-      # - id: setup-cluster-cloudwatch-logging-role
-      #   name: Setup role required for cluster to log to Cloudwatch
-      #   uses: aws-actions/aws-cloudformation-github-deploy@v1
-      #   with:
-      #     parameter-overrides: "Environment=${{ matrix.environment-type }},PodExecutionRoleName=${{ steps.get-pod-execution-role.outputs.name }}"
-      #     name: "cluster-cloudwatch-logging-role-${{ matrix.environment-type }}"
-      #     template: 'infra/cluster-logging/cf-cluster-log-cloudwatch-policy.yaml'
-      #     no-fail-on-empty-changeset: "1"
+      - id: setup-cluster-cloudwatch-logging-role
+        name: Setup role required for cluster to log to Cloudwatch
+        uses: aws-actions/aws-cloudformation-github-deploy@v1
+        with:
+          parameter-overrides: "Environment=${{ matrix.environment-type }},PodExecutionRoleName=${{ steps.get-pod-execution-role.outputs.name }}"
+          name: "cluster-cloudwatch-logging-role-${{ matrix.environment-type }}"
+          template: 'infra/cluster-logging/cf-cluster-log-cloudwatch-policy.yaml'
+          no-fail-on-empty-changeset: "1"
 
       - id: create-and-deploy-fluentbit-config
         name: Create and deploy FluentBit config
@@ -122,21 +122,21 @@ jobs:
 
           kubectl apply -f infra/cluster-logging/fargate-fluentbit-config.yaml
 
-      # - id: setup-datadog-cluster-agent
-      #   name: Setup Datadog cluster agent
-      #   run: |-
-      #     helm repo add datadog https://helm.datadoghq.com
-      #     helm repo update
-      #     helm upgrade datadog-agent datadog/datadog \
-      #       -f infra/datadog/cluster-agent-values.yaml \
-      #       --set datadog.apiKey=${{ secrets.DATADOG_API_KEY }} \
-      #       --set datadog.clusterName=biomage-$CLUSTER_ENV \
-      #       --install
+      - id: setup-datadog-cluster-agent
+        name: Setup Datadog cluster agent
+        run: |-
+          helm repo add datadog https://helm.datadoghq.com
+          helm repo update
+          helm upgrade datadog-agent datadog/datadog \
+            -f infra/datadog/cluster-agent-values.yaml \
+            --set datadog.apiKey=${{ secrets.DATADOG_API_KEY }} \
+            --set datadog.clusterName=biomage-$CLUSTER_ENV \
+            --install
 
-      # - id: setup-datadog-sidecar-permissions
-      #   name: Setup Datadog sidecar permissions
-      #   run: |-
-      #     kubectl apply -f infra/datadog/datadog-sidecar-rbac.yaml
+      - id: setup-datadog-sidecar-permissions
+        name: Setup Datadog sidecar permissions
+        run: |-
+          kubectl apply -f infra/datadog/datadog-sidecar-rbac.yaml
 
   report-if-failed:
     name: Report if workflow failed
