--- a/infra/cluster-logging/fargate-fluentbit-config.yaml
+++ b/infra/cluster-logging/fargate-fluentbit-config.yaml
@@ -44,11 +44,16 @@ data:
         Name   grep
         Match  kube.*
         Exclude log No activity ARN label set yet
-    # Exclude logs from worker pods in standby
+    # Exclude logs from Python worker containers in standby
     [FILTER]
         Name   grep
         Match  kube.*
         Exclude log No experiment ID label set yet
+    # Exclude logs from R worker containers in standby
+    [FILTER]
+        Name   grep
+        Match  kube.*
+        Exclude log Experiment not yet assigned
   output.conf: |
     [OUTPUT]
         Name cloudwatch
