--- a/.github/workflows/deploy-monitoring.yaml
+++ b/.github/workflows/deploy-monitoring.yaml
@@ -80,16 +80,16 @@ jobs:
           aws-secret-access-key: ${{ secrets.AWS_SECRET_ACCESS_KEY }}
           aws-region: ${{ secrets.AWS_REGION }}
 
-      - id: add-kubeconfig
-        name: Add k8s config file for existing cluster.
-        run: |-
-          aws eks update-kubeconfig --name biomage-$CLUSTER_ENV
+      # - id: add-kubeconfig
+      #   name: Add k8s config file for existing cluster.
+      #   run: |-
+      #     aws eks update-kubeconfig --name biomage-$CLUSTER_ENV
 
-      - id: install-eksctl
-        name: Install eksctl
-        run: |-
-          curl --silent --location "https://github.com/weaveworks/eksctl/releases/latest/download/eksctl_$(uname -s)_amd64.tar.gz" | tar xz -C /tmp
-          sudo mv /tmp/eksctl /usr/local/bin
+      # - id: install-eksctl
+      #   name: Install eksctl
+      #   run: |-
+      #     curl --silent --location "https://github.com/weaveworks/eksctl/releases/latest/download/eksctl_$(uname -s)_amd64.tar.gz" | tar xz -C /tmp
+      #     sudo mv /tmp/eksctl /usr/local/bin
 
       - id: setup-cluster-cloudwatch-logging-policy
         name: Setup role required for cluster to log to Cloudwatch
@@ -100,23 +100,23 @@ jobs:
           template: 'infra/cluster-logging/cf-cluster-log-cloudwatch-policy.yaml'
           no-fail-on-empty-changeset: "1"
 
-      # Setting up log forwarding for pods hosted in EC2 nodes
-      - id: create-fluent-bit-namespace
-        name: Create namespace for node FluentBit deployment
-        run: kubectl -f apply  infra/cluster-logging/node-fluentbit-namespace.yaml
+      # # Setting up log forwarding for pods hosted in EC2 nodes
+      # - id: create-fluent-bit-namespace
+      #   name: Create namespace for node FluentBit deployment
+      #   run: kubectl -f apply  infra/cluster-logging/node-fluentbit-namespace.yaml
 
-      - id: create-service-account-for-node-fluent-bit
-        name: Create service account for node FluentBit
-        env:
-          LOGGING_POLICY_ARN: ${{ steps.setup-cluster-cloudwatch-logging-policy.outputs.PolicyARN }}
-        run: |-
-          eksctl create iamserviceaccount \
-            --name fluent-bit \
-            --namespace node-logging \
-            --cluster biomage-$CLUSTER_ENV \
-            --role-name irsa-fluent-bit-$CLUSTER_ENV \
-            --attach-policy-arn $LOGGING_POLICY_ARN \
-            --approve
+      # - id: create-service-account-for-node-fluent-bit
+      #   name: Create service account for node FluentBit
+      #   env:
+      #     LOGGING_POLICY_ARN: ${{ steps.setup-cluster-cloudwatch-logging-policy.outputs.PolicyARN }}
+      #   run: |-
+      #     eksctl create iamserviceaccount \
+      #       --name fluent-bit \
+      #       --namespace node-logging \
+      #       --cluster biomage-$CLUSTER_ENV \
+      #       --role-name irsa-fluent-bit-$CLUSTER_ENV \
+      #       --attach-policy-arn $LOGGING_POLICY_ARN \
+      #       --approve
 
       - id: deploy-node-fluent-bit
         name: Deploy FluentBit for EC2 nodes
@@ -127,7 +127,11 @@ jobs:
           yq -i "(.. | select(type == \"!!str\")) |= sub(\"CI_CLUSTER_ENV\", \"$CLUSTER_ENV\")" infra/cluster-logging/node-fluentbit-config.yaml
           yq -i "(.. | select(type == \"!!str\")) |= sub(\"CI_AWS_REGION\", \"$AWS_REGION\")" infra/cluster-logging/node-fluentbit-config.yaml
 
-          kubectl -f apply  infra/cluster-logging/node-fluentbit-config.yaml
+          echo "AWS_REGION: $AWS_REGION"
+          echo "CLUSTER_ENV: $CLUSTER_ENV"
+          cat infra/cluster-logging/node-fluentbit-config.yaml
+
+          # kubectl -f apply  infra/cluster-logging/node-fluentbit-config.yaml
 
       # Setting up log forwarding for pods hosted on Fargate nodes
       - id: attach-pod-execution-role-name
@@ -135,15 +139,17 @@ jobs:
         env:
           LOGGING_POLICY_ARN: ${{ steps.setup-cluster-cloudwatch-logging-policy.outputs.PolicyARN }}
         run: |-
+          echo "LOGGING_POLICY_ARN: $LOGGING_POLICY_ARN"
+
           # Pods launched in the same cluster has the same pod execution role, as pod execution role scope is cluster-wide.
           # See https://eksctl.io/usage/fargate-support/#creating-a-cluster-with-fargate-support
           # Getting fargate-profile of pipeline or worker in the same cluster gets the same pod execution role.
 
-          POD_EXEC_ROLE_NAME=$(aws eks describe-fargate-profile \
-            --cluster-name biomage-$CLUSTER_ENV \
-            --fargate-profile-name pipeline-default | jq -r '.fargateProfile.podExecutionRoleArn' | awk -F"/" '{print (NF>1)? $NF : ""}' )
+          # POD_EXEC_ROLE_NAME=$(aws eks describe-fargate-profile \
+          #   --cluster-name biomage-$CLUSTER_ENV \
+          #   --fargate-profile-name pipeline-default | jq -r '.fargateProfile.podExecutionRoleArn' | awk -F"/" '{print (NF>1)? $NF : ""}' )
 
-          aws iam attach-role-policy --role-name $POD_EXEC_ROLE_NAME --policy-arn $LOGGING_POLICY_ARN
+          # aws iam attach-role-policy --role-name $POD_EXEC_ROLE_NAME --policy-arn $LOGGING_POLICY_ARN
 
       - id: deploy-fargate-fluent-bit-config
         name: Create and deploy FluentBit config for Fargate pods
@@ -154,24 +160,28 @@ jobs:
           yq -i "(.. | select(type == \"!!str\")) |= sub(\"CI_CLUSTER_ENV\", \"$CLUSTER_ENV\")" infra/cluster-logging/fargate-fluentbit-config.yaml
           yq -i "(.. | select(type == \"!!str\")) |= sub(\"CI_AWS_REGION\", \"$AWS_REGION\")" infra/cluster-logging/fargate-fluentbit-config.yaml
 
-          kubectl apply -f infra/cluster-logging/fargate-fluentbit-config.yaml
+          echo "AWS_REGION: $AWS_REGION"
+          echo "CLUSTER_ENV: $CLUSTER_ENV"
+          cat infra/cluster-logging/fargate-fluentbit-config.yaml
+
+          # kubectl apply -f infra/cluster-logging/fargate-fluentbit-config.yaml
 
       # Setting up Datadog to watch pod metrics for pods hosted on EC2 and Fargate nodes
-      - id: setup-datadog-cluster-agent
-        name: Setup Datadog cluster agent
-        run: |-
-          helm repo add datadog https://helm.datadoghq.com
-          helm repo update
-          helm upgrade datadog-agent datadog/datadog \
-            -f infra/datadog/cluster-agent-values.yaml \
-            --set datadog.apiKey=${{ secrets.DATADOG_API_KEY }} \
-            --set datadog.clusterName=biomage-$CLUSTER_ENV \
-            --install
+      # - id: setup-datadog-cluster-agent
+      #   name: Setup Datadog cluster agent
+      #   run: |-
+      #     helm repo add datadog https://helm.datadoghq.com
+      #     helm repo update
+      #     helm upgrade datadog-agent datadog/datadog \
+      #       -f infra/datadog/cluster-agent-values.yaml \
+      #       --set datadog.apiKey=${{ secrets.DATADOG_API_KEY }} \
+      #       --set datadog.clusterName=biomage-$CLUSTER_ENV \
+      #       --install
 
-      - id: setup-datadog-sidecar-permissions
-        name: Setup Datadog sidecar permissions
-        run: |-
-          kubectl apply -f infra/datadog/datadog-sidecar-rbac.yaml
+      # - id: setup-datadog-sidecar-permissions
+      #   name: Setup Datadog sidecar permissions
+      #   run: |-
+      #     kubectl apply -f infra/datadog/datadog-sidecar-rbac.yaml
 
   report-if-failed:
     name: Report if workflow failed
