--- a/infra/cf-loadbalancer.yaml
+++ b/infra/cf-loadbalancer.yaml
@@ -27,7 +27,7 @@ Resources:
         - Key: routing.http2.enabled
           Value: "true"
       Name: !Sub "k8s-${Environment}"
-      Scheme: internet-facing
+      Scheme: !If [isPublic, "internet-facing", "internal"]
       Subnets: 
         Fn::Split:
           - ','
