remove punctuation and space from generated secret

--- a/cf/rds.yaml
+++ b/cf/rds.yaml
@@ -60,7 +60,8 @@ Resources:
         SecretStringTemplate: '{"username": "postgres"}'
         GenerateStringKey: password
         PasswordLength: 32
-        ExcludeCharacters: "/@\"'\\"
+        ExcludePunctuation: true
+        IncludeSpace: false
 
   RDSInvokeLambdaRole:
     Type: "AWS::IAM::Role"
