--- a/.github/workflows/deploy-staging.yaml
+++ b/.github/workflows/deploy-staging.yaml
@@ -189,6 +189,12 @@ jobs:
             exit 1
           fi
 
+          ENSURE_PSQL_INSTALLED_COMMAND="sudo yum -y install postgresql"
+
+          aws ssm send-command --instance-ids "$INSTANCE_ID" \
+            --document-name AWS-RunShellScript \
+            --parameters "commands='$ENSURE_PSQL_INSTALLED_COMMAND'"
+
           SETUP_ROLES_CMD="
             PGPASSWORD=\'${AURORA_STAGING_PASSWORD}\' psql \
               --host=${RDSHOST} \
