test prevent auto rotation

--- a/cf/rds.yaml
+++ b/cf/rds.yaml
@@ -59,8 +59,8 @@ Resources:
       GenerateSecretString:
         SecretStringTemplate: '{"username": "postgres"}'
         GenerateStringKey: password
-        PasswordLength: 16
-        ExcludeCharacters: "$`\\'\"/@"
+        PasswordLength: 24
+        ExcludePunctuation: true
         IncludeSpace: false
 
   RDSInvokeLambdaRole:
@@ -110,6 +110,7 @@ Resources:
           Fn::ImportValue: !Sub "eksctl-biomage-${Environment}-cluster::SubnetsPrivate"
         VpcSecurityGroupIds:
           Fn::ImportValue: !Sub "eksctl-biomage-${Environment}-cluster::ClusterSecurityGroupId"
+      RotateImmediatelyOnUpdate: false
       RotationRules:
         Duration: 2h
         ScheduleExpression: 'cron(0 8 1 * ? *)'
