added back dev as default

--- a/cf/batch.yaml
+++ b/cf/batch.yaml
@@ -6,6 +6,7 @@ Parameters:
     Type: String
     Default: development
     AllowedValues:
+      - development
       - staging
       - production
 
