Add instance profile

--- a/cf/irsa-pipeline-role.yaml
+++ b/cf/irsa-pipeline-role.yaml
@@ -16,6 +16,12 @@ Parameters:
     Description: The OIDC provider
 
 Resources:
+  PipelineProfile:
+    Type: AWS::IAM::InstanceProfile
+    Properties: 
+      InstanceProfileName: !Sub "pipeline-instance-profile-${Environment}"
+      Roles: 
+        - !Ref PipelineRole
   PipelineRole:
     Type: "AWS::IAM::Role"
     Properties:
@@ -153,10 +159,3 @@ Resources:
                   - !Sub "arn:aws:states:${AWS::Region}:${AWS::AccountId}:activity:biomage-qc-${Environment}-*"
                   - !Sub "arn:aws:states:${AWS::Region}:${AWS::AccountId}:activity:biomage-gem2s-${Environment}-*"
                   - !Sub "arn:aws:states:${AWS::Region}:${AWS::AccountId}:activity:pipeline-${Environment}-*"
-
-Outputs:
-  PipelineRole:
-    Description: The role the pipeline instance runs with
-    Value: !Ref PipelineRole
-    Export:
-      Name: !Sub 'pipeline-${Environment}::Role'
